r327 (08. 07. 2025):
Added buff "Bag Interaction Cooldown"
Code for deployables and timers will load if their respective option is on
Improved detection and hooking of Captain Damage Reduction tracker (EHI will hook vanilla code and load tracker only if at least 1 spawn point for Captain is defined in the script)
Big Oil Day 1: Fixed XP Overview not visible

r326 (07. 07. 2025):
Fixed a crash after assault end
Hell's Island: Fixed a log spam after opening the lid
Waypoints: Fixed an issue where some waypoints are stuck after alarm

r325 (06. 07. 2025):
Any related code to Buffs will load only if Buffs are enabled
Added options:
- Show Mission Trackers - Remember or Find Information
- Show Waypoints For Heist Elements - Remember or Find Information
- Show reload as interact
- Show melee as interact
- Show end game stats
- (Health) Color buff based on damage from Snipers
- (Health) Color buff based on damage from ZEAL Heavy SWAT on Death Sentence
Added (changeable) persistent state to almost every buff
Added buffs for Yakuza
Code cleanup and reorganization
Fixed logic issues with Assault Delay removing Enemy Counter
Optimization improvements
Assault Diff: Updated icon
Assault trackers: Optimization in memory used and code logic
Berserker Buff: Fixed an issue where the buff did not update correctly with Yakuza perk deck equipped
Buffs: Added an option to change their color based on their action in the game
Buffs: Fixed an issue where Damage Reduction buff could get stuck in other buffs
Buffs: Various tweaks and adjustments
Damage Reduction Buff: Made the value rounded to make it more readable
Menu: Optimized opening the menu for the first time
Menu: Sub-menus are loaded on-demand (saves memory)
Menu: Added ability to preview certain features in the menu (not possible in VR)
Reload Buff: Fixed an issue where interuptable reload is not reflected in the buff
Brooklyn 10-10: Fixed overlapping waypoints at the end